--- a/WhatsTheMoveApp/WhatsTheMoveApp.csproj
+++ b/WhatsTheMoveApp/WhatsTheMoveApp.csproj
@@ -18,6 +18,9 @@
     <EmbeddedResource Update="Views\BrowsePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LoadingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
